# kaggleChessC

./: CMakeLists.txt  chess.hpp  evaluation.cpp  game_tables.cpp  main.cpp  search.cpp  todo.txt  transposition_table.cpp
include/: chess.hpp  engine.h  evaluation.h  evaluator.h  game_tables.h  move_sorters.h  search.h  searchers.h  transposition_table.h  utilities.h
src/: basic_iterative_searcher.cpp  basic_searcher.cpp  compare_evaluators.cpp  engine.cpp  evaluation.cpp  game_tables.cpp  heuristic_evaluator.cpp  history_killer_pv_TT_searcher.cpp  history_killer_pv_searcher.cpp  history_pv_searcher.cpp  input.txt  input2.txt  iterative_pv_searcher.cpp  main.cpp  move_sorters.cpp  negaMaxQSearcher.cpp  negaMaxSearcher.cpp  search.cpp  searchers.cpp  sorters.cpp  transposition_table.cpp
